# roboscheduler

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.rst  STYLE.rst  readthedocs.yml  requirements.txt  setup.cfg  setup.py
cextern/: cCadenceCore.cpp  cadenceCore.cpp
data/: master_schedule_apo_maximal.par  master_schedule_apo_maximal_v2.par  master_schedule_apo_may21.par  master_schedule_apo_minimal.par  master_schedule_apo_normal.par  master_schedule_apo_normal_v2.par  master_schedule_lco_gamma.par  master_schedule_lco_maximal_v2.par  master_schedule_lco_may21.par  master_schedule_lco_minimal.par  master_schedule_lco_normal.par  master_schedule_lco_normal_v2.par  rsc-test-cadence.fits  sch_head.txt
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst  roboscheduler.cadence.rst  roboscheduler.fields.rst  roboscheduler.observations.rst  roboscheduler.scheduler.rst
include/: cadenceCore.h
python/roboscheduler/: __init__.py  cadence.py  fields.py  ks91.py  moonphase.py  observations.py  scheduler.py
python/roboscheduler/core/: exceptions.py
python/roboscheduler/etc/: master_schedule_apo_impossible.par  master_schedule_apo_maximal_v3.par  master_schedule_apo_maximal_v4.par  master_schedule_apo_minimal.par  master_schedule_apo_normal_v3.par  master_schedule_apo_normal_v4.par  master_schedule_apo_normal_v5.par  master_schedule_apo_plates.par  master_schedule_apo_test.par  master_schedule_apo_v6.par  master_schedule_apo_v6_alttwi.par  master_schedule_apo_v6_vartwi.par  master_schedule_lco_impossible.par  master_schedule_lco_maximal.par  master_schedule_lco_maximal_v3.par  master_schedule_lco_maximal_v4.par  master_schedule_lco_normal.par  master_schedule_lco_normal_v3.par  master_schedule_lco_test.par  master_schedule_lco_v6.par  master_schedule_lco_v6_vartwi.par  rmToggle.yml
python/roboscheduler/tests/: conftest.py  test_cadence.py  test_main.py  test_packing.py
python/roboscheduler/utils/: logger.py
tests/: test_cadence.py  test_cfginput.cfg  test_scheduler.py
