[metadata]
name = sdss-roboscheduler
version = 2.0.1
author = Michael Blanton
maintainer = John Donor
maintainer_email = j.donor@tcu.edu
description = fps scheduling software for SDSS V
url = https://github.com/sdss/roboscheduler
project_urls =
    Repository = https://github.com/sdss/roboscheduler
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
    = python
setup_requires =
    pybind11>=2.6.2
install_requires =
    numpy
    PyAstronomy
    ortools
    astropy
    scipy
    fitsio
    peewee
    pydl
    pyyaml
    pygments
    sdssdb>=0.6.1
    sdss-tree>=2.15.2
    sdss-access>=0.2.3
scripts =
  bin/make_ms
  bin/roboschedulerversion.py
  bin/night_length

[options.extras_require]
dev =
    ipython>=7.13.0
    pytest>=3.0.7
    pytest-cov>=2.4.0
    pytest-sugar>=0.8.0

[options.packages.find]
where =
    python

[options.package_data]
roboscheduler =
    etc/*
